@@ -40,5 +40,6 @@
 
 * 20080721: When we drop Python 2.3 support, we should user "PyTuple_Pack".
 
-* 20080807: EGG for 4.7.2 was installed as a directory, nor a ZIP file. Why?.
+* 20080807: The EGG for 4.7.2 was installed as a directory, not a
+  ZIP file. Why?.
 
